Acessar banco de metadados de cubos com JPA/Hibernate